[package]
name = "ripsaw"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
ascon-hash = "0.2.0"
belt-hash = "0.1.1"
blake2 = "0.10.6"
clap = {version = "4.5.23", features = ["derive"] }
env_logger = "0.11.5"
fsb = "0.1.3"
gost94 = "0.10.4"
groestl = "0.10.1"
jh = "0.1.0"
k12 = "0.3.0"
log = "0.4.22"
md2 = "0.10.2"
md4 = "0.10.2"
md5 = "0.7.0"
ripemd = "0.1.3"
sha1 = "0.10.6"
sha1-checked = "0.10.0"
sha2 = "0.10.8"
sha3 = "0.10.8"
shabal = "0.4.1"
skein = "0.1.0"
sm3 = "0.4.2"
streebog = "0.10.2"
tiger = "0.2.1"
whirlpool = "0.10.4"
